<resources>
    <string name="app_name">Epam-Android-2020</string>
    <string name="init_str">Epam 2020</string>
    <string name="text_email">Email</string>
    <string name="text_second_name">Second Name</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_read">READ</string>
    <string name="text_name">Name</string>
    <string name="title_activity_display_map">Map</string>
    <string name="title">Title</string>
    <string name="google_maps_key">AIzaSyDHhJemdxH2add8n7voudQ_rY24ahouCy8</string>
    <string name="text_password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_registration">REGISTER</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="restore">RESTORE</string>
</resources>
